--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "@angular/platform-browser": "2.0.0-rc.1",
     "@angular/platform-browser-dynamic": "2.0.0-rc.1",
     "@angular/router": "2.0.0-rc.1",
+    "bootstrap": "^4.0.0-alpha.2",
     "es6-shim": "^0.35.0",
+    "font-awesome": "^4.6.3",
+    "fuel-ui": "^0.2.7",
     "reflect-metadata": "0.1.3",
     "rxjs": "5.0.0-beta.6",
     "systemjs": "0.19.26",
